--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "vue": "^3.0.4",
     "vue-router": "^4.0.3",
+    "vue-slider-component": "^4.0.0-beta.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
