--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "material-design-icons": "^3.0.1",
+    "materialize-css": "^1.0.0-rc.2",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^4.0.0-beta.3",
@@ -14,7 +16,8 @@
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@types/materialize-css": "^1.0.8",
+    "@vue/compiler-sfc": "^3.0.4",
+    "vite": "^1.0.0-rc.13"
   }
 }
