--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "vue": "^3.0.4",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^4.0.0-beta.3",
+    "vue-youtube": "^1.4.0",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
